render hello world

--- a/monitor/www/index.html
+++ b/monitor/www/index.html
@@ -6,8 +6,9 @@
     <title>Agent Contest 2017</title>
     <link rel="shortcut icon" href="/favicon.ico", type="image/x-icon">
     <script src="/ol.js"></script>
+    <script src="/main.js"></script>
   </head>
   <body>
-    <script src="/main.js"></script>
+    <script>Monitor.default(document.body);</script>
   </body>
 </html>
