add openlayers css

--- a/monitor/www/index.html
+++ b/monitor/www/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>Agent Contest 2017</title>
     <link rel="shortcut icon" href="/favicon.ico", type="image/x-icon">
-    <script src="/ol.js"></script>
+    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/ol.css">
     <script src="/main.js"></script>
   </head>
   <body>
