add loading screen

--- a/monitor/www/index.html
+++ b/monitor/www/index.html
@@ -6,6 +6,7 @@
     <title>Agent Contest 2017</title>
     <link rel="shortcut icon" href="/favicon.ico", type="image/x-icon">
     <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/loader.css">
     <link rel="stylesheet" href="/ol.css">
     <script src="/main.js"></script>
   </head>
