move openlayers controls around

--- a/monitor/www/index.html
+++ b/monitor/www/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <title>Agent Contest 2017</title>
     <link rel="shortcut icon" href="/favicon.ico", type="image/x-icon">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/ol.css">
+    <link rel="stylesheet" href="/layout.css">
     <link rel="stylesheet" href="/checkerboard.css">
     <link rel="stylesheet" href="/loader.css">
-    <link rel="stylesheet" href="/ol.css">
     <script src="/main.js"></script>
   </head>
   <body>
