--- a/monitor/src/main/resources/www/index.html
+++ b/monitor/src/main/resources/www/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="utf-8">
     <title>Agent Contest 2017</title>
-    <link rel="shortcut icon" href="/favicon.ico", type="image/x-icon">
-    <link rel="stylesheet" href="/ol.css">
-    <link rel="stylesheet" href="/layout.css">
-    <link rel="stylesheet" href="/checkerboard.css">
-    <link rel="stylesheet" href="/loader.css">
-    <script src="/main.js"></script>
+    <link rel="shortcut icon" href="favicon.ico", type="image/x-icon">
+    <link rel="stylesheet" href="ol.css">
+    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="checkerboard.css">
+    <link rel="stylesheet" href="loader.css">
+    <script src="main.js"></script>
   </head>
   <body>
     <div id="map"></div>
